--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "gsap": "^3.13.0",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.9.6",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
