--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
